[package]
name = "code-remote"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
regex = "1.5.4"
color-eyre = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.5.8"
crossterm = "0.27.0"
ratatui = "0.29"
tui-textarea = "0.4.0"
rpassword = "4.0.0"

